add sector  section

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+CORS_ORIGIN=http://localhost:3000,http://127.0.0.1:3000
